<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="SignUp"
        android:textSize="30dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/coloAccent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:text="Fullname"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:fontFamily="@font/poppinsmedium"
        android:layout_height="wrap_content" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
         app:counterMaxLength="15">
    </com.google.android.material.textfield.TextInputEditText>


    <TextView
        android:layout_width="wrap_content"
        android:text="Email"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/poppinsmedium"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="Userame"
        android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
        android:fontFamily="@font/poppinsmedium"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="Password"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/poppinsmedium"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        app:helperText="required"/>

    <Button
        android:id="@+id/buttonSignup"
        android:text="Signup"
        android:fontFamily="@font/poppinsbold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />


    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppinsmedium" />


</LinearLayout>